Fix wrapping and set all vertical alignment of cells to top

--- a/css/glowingbear.css
+++ b/css/glowingbear.css
@@ -29,15 +29,17 @@ table {
 }
 td.time {
     padding-right: 5px;
+    vertical-align: top;
 }
 
 td.prefix {
     text-align: right;
-    vertical-align: middle;
+    vertical-align: top;
     padding-right: 5px;
 }
 td.message {
     word-wrap: break-word;
+    vertical-align: top;
     width: 100%;
 }
 hr {
@@ -45,7 +47,7 @@ hr {
   border-color: darkgreen;
 }
 .text {
-    white-space: pre;
+    white-space: pre-wrap;
 }
 /* Lastly, apply responsive CSS fixes as necessary */
 @media (max-width: 767px) {
